--- a/src/styles/HomePage/Recruit.module.css
+++ b/src/styles/HomePage/Recruit.module.css
@@ -64,7 +64,7 @@
 .card {
     background: #fff;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     color: #000;
     padding: 3% 6%;
@@ -119,13 +119,23 @@
     border-radius: 8px;
     width: max-content;
     cursor: pointer;
+    /* height: 70%; */
 }
 
 .bookmark {
     font-size: 18px;
     background: #D8D8D8;
-    padding: 2% 1.5%;
+    padding: 10% 5%;
     border-radius: 8px;
     color: #8B8B8B;
     cursor: pointer;
+    margin-left: 4%;
+    /* height: 70%; */
+}
+
+.buttonWrap{
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    /* align-items: center; */
 }
