--- a/src/styles/SignIn.module.css
+++ b/src/styles/SignIn.module.css
@@ -1,4 +1,3 @@
-
 /* Sign Up and Sign In */
 
 
@@ -87,7 +86,7 @@
   content: 'or';
   display: inline-block;
   position: relative;
-  top: -7px;
+  top: -10px;
   padding: 0 16px;
   background: #fff;
   font: normal 14px/14px "Mona Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -122,7 +121,24 @@
   row-gap: 8px;
 }
 
+.inputError {
+  margin-top: 4%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+
+.errorMsg {
+  color: #e72b2bc7;
+  font-size: 12px;
+}
+
 .inputWrap label {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.inputError label {
   font-size: 18px;
   font-weight: 600;
 }
@@ -134,6 +150,15 @@
   padding: 12px 10px;
   border-radius: 10px;
   border: 1px solid #BCC7CE;
+}
+
+.inputError input {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 30px;
+  padding: 12px 10px;
+  border-radius: 10px;
+  border: 1px#e72b2bc7 solid;
 }
 
 .privacyPolicyWrap {
