--- a/src/styles/HomePage/SecondSection.module.css
+++ b/src/styles/HomePage/SecondSection.module.css
@@ -10,7 +10,7 @@
 .cardWrap {
     background: rgba(14, 170, 181, 0.05);
     width: 39%;
-    height: max-content;
+    height: auto;
     padding: 3% 4%;
     box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.07);
     border-radius: 20px;
