--- a/src/styles/HomePage/Candidate.module.css
+++ b/src/styles/HomePage/Candidate.module.css
@@ -43,7 +43,7 @@
     border-radius: 10px;
 }
 
-.left .designation{
+.left .designation {
     font-weight: 600;
     font-size: 16px;
     margin-top: 2%;
@@ -72,4 +72,18 @@
 .right .desc {
     font-size: 16px;
     font-weight: 400;
+}
+
+.btn {
+    margin: 3% 4%;
+    font-weight: 400;
+    font-size: 22px;
+    width: max-content;
+    /* height: 55px; */
+    padding: 8px 40px 8px 40px;
+    margin-top: 2%;
+    border-radius: 30px;
+    color: #fff;
+    background: #000;
+    cursor: pointer;
 }
