--- a/src/styles/ResumeBuilder.module.css
+++ b/src/styles/ResumeBuilder.module.css
@@ -4,19 +4,44 @@
     padding-bottom: 10px;
 }
 
-.topSection h1 {
+.topSection{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.topSectionLeft h1 {
     margin: 0;
     font-size: 28px;
     font-weight: 700;
     line-height: 54px;
 }
 
-.topSection p {
+.topSectionLeft p {
     margin: 0;
-    width: 40%;
+    width: 70%;
     font-size: 14px;
     font-weight: 400;
     line-height: 22px;
+    color: #8B8B8B;
+}
+
+.topSetionRight{
+    
+}
+
+.topSetionRight p{
+    background-color: #f0f0f0;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px 1px 7px;
+
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 7px;
+    padding: 8px 10px;
+}
+
+.topSetionRight p span{
+    color: var(--primary-color);
 }
 
 .stagesWrap {
@@ -93,12 +118,20 @@
     line-height: 30px;
 }
 
-.formWrap input {
+.formWrap input{
     font-size: 14px;
     font-weight: 400;
     line-height: 30px;
     padding: 4px 10px;
     border-radius: 5px;
+    border: 1px solid #BCC7CE;
+}
+
+
+.phoneInput{
+    padding: 2px 0px;
+    border-radius: 5px;
+    outline: none;
     border: 1px solid #BCC7CE;
 }
 
